<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/fr.ornidroid"
    android:title="@string/preferences" >

    <fr.ornidroid.ui.preferences.ListPreferenceMultiSelect
        android:defaultValue="fr"
        android:entries="@array/lang_labels"
        android:entryValues="@array/lang_values"
        android:key="@string/preferences_lang_key"
        android:persistent="true"
        android:summary="@string/preferences_lang_summary"
        android:title="@string/preferences_lang_title" />
<!-- 
    <fr.ornidroid.ui.components.OrnidroidHomeDialogPreference
        android:key="@string/preferences_ornidroid_home_key"
        android:summary="@string/preferences_ornidroid_home_summary"
        android:title="@string/preferences_ornidroid_home_title" />
-->
    <CheckBoxPreference
        android:key="@string/preferences_automatic_update_check_key"
        android:persistent="true"
        android:summary="@string/preferences_automatic_update_check_summary"
        android:title="@string/preferences_automatic_update_check_title" />

    <ListPreference
        android:entries="@array/ornidroid_home_options"
        android:entryValues="@array/ornidroid_home_values"
        android:key="@string/preferences_ornidroid_home_key"
        android:summary="@string/preferences_ornidroid_home_summary"
        android:title="@string/preferences_ornidroid_home_title" />

</PreferenceScreen>