<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/fr.ornidroid"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5sp" >

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="4.0" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <fr.ornidroid.ui.multicriteriasearch.MultiCriteriaSelectField
                android:id="@+id/search_category_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20sp"
                android:paddingLeft="10sp"
                custom:spinnerPrompt="@string/search_category_choose"
                custom:text="@string/search_category" />

            <fr.ornidroid.ui.multicriteriasearch.MultiCriteriaSelectField
                android:id="@+id/search_habitat_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20sp"
                android:paddingLeft="10sp"
                custom:spinnerPrompt="@string/search_habitat_choose"
                custom:text="@string/search_habitat" />

            <fr.ornidroid.ui.multicriteriasearch.MultiCriteriaSelectField
                android:id="@+id/search_size_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20sp"
                android:paddingLeft="10sp"
                custom:spinnerPrompt="@string/search_size_choose"
                custom:text="@string/search_size" />

            <fr.ornidroid.ui.multicriteriasearch.MultiCriteriaSelectField
                android:id="@+id/search_feather_colour_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20sp"
                android:paddingLeft="10sp"
                custom:spinnerPrompt="@string/search_colour_choose"
                custom:text="@string/search_feather_colour" />

            <fr.ornidroid.ui.multicriteriasearch.MultiCriteriaSelectField
                android:id="@+id/search_beak_colour_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20sp"
                android:paddingLeft="10sp"
                custom:spinnerPrompt="@string/search_colour_choose"
                custom:text="@string/search_beak_colour" />

            <fr.ornidroid.ui.multicriteriasearch.MultiCriteriaSelectField
                android:id="@+id/search_paw_colour_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20sp"
                android:paddingLeft="10sp"
                custom:spinnerPrompt="@string/search_colour_choose"
                custom:text="@string/search_paw_colour" />

            <fr.ornidroid.ui.multicriteriasearch.MultiCriteriaSelectField
                android:id="@+id/search_beak_form_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20sp"
                android:paddingLeft="10sp"
                custom:spinnerPrompt="@string/search_beak_form_choose"
                custom:text="@string/search_beak_form" />

            <fr.ornidroid.ui.multicriteriasearch.MultiCriteriaSelectField
                android:id="@+id/search_remarkable_sign_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20sp"
                android:paddingLeft="10sp"
                custom:spinnerPrompt="@string/search_remarkable_sign_choose"
                custom:text="@string/search_remarkable_sign" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/search_nb_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:padding="5sp"
            android:text="@string/search_results" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/reset_form_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:minWidth="100sp"
                android:text="@string/reset_form" />

            <Button
                android:id="@+id/search_show_results_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:minWidth="100sp"
                android:text="@string/search_show_results" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>